Fix frontend videos, add generic thumbnails, adjust navbar spacing

--- a/yt-web-client/app/navbar/navbar.module.css
+++ b/yt-web-client/app/navbar/navbar.module.css
@@ -9,3 +9,9 @@
   width: 90px;
   height: 20px;
 }
+
+.buttonContainer {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
